syntax = "proto3";

import "google/protobuf/timestamp.proto";

package auth;
option go_package ="/v1";

message UserRequest {
  string username = 1;
  string password = 2;
  google.protobuf.Timestamp created_time = 3;
}

message UserReply {}

service UserService {
  rpc CreateUser(UserRequest) returns (UserReply) {};
}

